# cedo

./: .gitignore  CMakeLists.txt  README.md
include/cedo/Backend/: AsmStreamer.h  EmitAsm.h
include/cedo/Binfmt/: Binfmt.h  DWARF.h  DWARFConstants.h  Debug.h  Type.h
include/cedo/Core/: EndianByteReader.h  ErrorOr.h  FileReader.h
include/cedo/Runtime/: Runtime.h
lib/: CMakeLists.txt
lib/Backend/: CMakeLists.txt  EmitAsm.cpp
lib/Binfmt/: Binfmt.cpp  CMakeLists.txt  DWARF.cpp  DWARFType.cpp  Debug.cpp  ELF.cpp  ELF.h
lib/Core/: CMakeLists.txt  FileReader.cpp
lib/Runtime/: CMakeLists.txt  Runtime.cpp
src/: CMakeLists.txt  cedo.cpp
src/version/: CMakeLists.txt  ExportVersion.c  README  Version.cpp  Version.h
test/: CMakeLists.txt
test/golden/: CMakeLists.txt  basic.c  basic.s  nullptr.s
test/golden/compound/: CMakeLists.txt  basic_compound.cpp  basic_compound.s  bitfield.cpp  bitfield.s  end_padding_struct.cpp  end_padding_struct.s  mid_padding_struct.cpp  mid_padding_struct.s  union.c  union.s
test/golden/pointer/: CMakeLists.txt  input_sym.c  input_sym.s
test/system/: CMakeLists.txt  basic_test.c  basic_test.cedo.c  main_executed_test.c  main_executed_test.cedo.c
test/system/array/: CMakeLists.txt  int_array_test.c  int_array_test.cedo.c
test/system/compound/: CMakeLists.txt  array_members.c  array_members.cedo.c  bitfield.c  bitfield.cedo.c  class.cedo.cpp  class.cpp  compound.h  end_padding.c  end_padding.cedo.c  middle_padding.c  middle_padding.cedo.c  struct_members.c  struct_members.cedo.c  struct_test.c  struct_test.cedo.c  union.c  union.cedo.c
test/system/pointer/: CMakeLists.txt  basic_pointer_test.c  basic_pointer_test.cedo.c
test/system/typedef/: CMakeLists.txt  multilevel_typedef.h  multilevel_typedef_test.c  multilevel_typedef_test.cedo.c  typedef_test.c  typedef_test.cedo.c  using_test.cedo.cpp  using_test.cpp
test/unittests/: CMakeLists.txt
test/unittests/Backend/: AsmStreamerTest.cpp  CMakeLists.txt  EmitAsmTest.cpp
test/unittests/Binfmt/: CMakeLists.txt  DWARFBasicTest.cpp  DebugTest.cpp  ELFFindSectionTest.cpp  ELFReaderTest.h  ELFResolveRelocTest.cpp  FindFileTriple.cpp
test/unittests/Binfmt/Inputs/: BasicELFBE64.yaml  BasicELFLE32.yaml  BasicELFLE64.yaml  BasicTypes.c  CMakeLists.txt  ResolveReloc.s  Shdr.yaml
test/unittests/Core/: CMakeLists.txt  EndianByteReaderTest.cpp  FileReaderTest.cpp
utils/DWARFConstants/: GenConstants.py  constants.json
